# Crystal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CrystalAlgrithm/Camera/: Camera.cu  Camera.h
CrystalAlgrithm/DataMapper/: STF.cu  STF.h
CrystalAlgrithm/Light/: Light.cu  Light.h
CrystalAlgrithm/Material/: Material.cu  Material.h  ScatteringDistribution.cu  ScatteringDistribution.h  Texture.cu  Texture.h  lambertian.h
CrystalAlgrithm/Scene/: Scene.cpp  Scene.h  ScenePreset.cpp  ScenePreset.h
CrystalAlgrithm/Shape/: Primitive.cu  Primitive.h  bvhTree.cu  bvhTree.h  shape.cu  shape.h  sphere.cu  sphere.h  surface.cu  surface.h
CrystalAlgrithm/Utility/: Common.cpp  Common.hpp  Geometry.cpp  Geometry.h  RNG.h  Sampling.h  Spectrum.cpp  Spectrum.h  Transform.cpp  Transform.h  cpu_Common.cpp  cpu_Common.hpp  cuda_common.cu  cuda_common.cuh  timerRandom.cpp  timerRandom.hpp
CrystalAlgrithm/Visualizer/: EmissionAbsorption.cu  EmissionAbsorption.h  GradientShading.cu  GradientShading.h  KroesSingleScattering.cu  KroesSingleScattering.h  Visualizer.cu  Visualizer.h
CrystalAlgrithm/Volume/: OctreeVolume.cu  OctreeVolume.h  Texture3DVolume.cu  Texture3DVolume.h  Volume.cu  Volume.h
CrystalGUI/DataMapper/: DataMapperDockWidget.cpp  DataMapperDockWidget.hpp  DataMapperStatistics.cpp  DataMapperStatistics.hpp  ScalarTransferFuncGraphicsView.cpp  ScalarTransferFuncGraphicsView.hpp  ScalarTransferFuncNodePropertiesWidget.cpp  ScalarTransferFuncNodePropertiesWidget.hpp
CrystalGUI/DataPresent/: DataPresentDockWidget.cpp  DataPresentDockWidget.hpp  DataTreeWidget.cpp  DataTreeWidget.hpp  DevicesRecord.cpp  MemoryRecord.cpp
CrystalGUI/Display/: DisplayWidget.cpp  DisplayWidget.hpp
CrystalGUI/InfoPresent/: DataPresentDockWidget.cpp  DataTreeWidget.hpp  DevicesRecord.cpp
CrystalGUI/Main/: MainWindow.cpp  MainWindow.hpp  main.cpp
CrystalGUI/ReaderAndWriter/: DataMapperXmlParser.cpp  DataMapperXmlParser.hpp  ParserDataMapper.cpp  ParserDataMapper.hpp  ParserGeometry.cpp  ParserGeometry.hpp  ParserScene.cpp  ParserScene.hpp
CrystalGUI/Utility/: Common.hpp  QDoubleSlider.cpp  QDoubleSlider.hpp  QSliderDoubleRange.cpp  Status.cpp  Status.hpp  Utility.cpp  Utility.hpp
CrystalThirdParty/: CMakeLists.txt
Examples/Example1/: DataMapper-demo.xml  DataMapper.xml  Scene.xml  SceneGeometry.xml
Examples/Example2/: DataMapper-demo.xml
Resources/qss/: DataMapperDock.qss  FloatSetter.qss  FloatSetter_QPushButton.qss  QPushButtonInDataMapperDock.qss  STFWidget.qss
Software/: Crystal.exp  Crystal.lib  CrystalAlgrithm_r.exp  CrystalAlgrithm_r.lib
Software/Examples/Example1/: DataMapper.xml  Scene.xml  SceneGeometry.xml
Software/Resources/qss/: InitialMainWindow.qss  RGBSetter.qss
